syntax = "proto3";

package core.corepb.v1;

option go_package = "github.com/obolnetwork/charon/core/corepb/v1";

import "core/corepb/v1/core.proto";

message ParSigExMsg {
  core.corepb.v1.Duty duty = 1;
  core.corepb.v1.ParSignedDataSet data_set = 2;
}
